edit receptionist error has been solved