@@ -1,10 +1,10 @@
 package com.uor.eng.service.impl;
 
+import com.uor.eng.exceptions.BadRequestException;
+import com.uor.eng.exceptions.ResourceNotFoundException;
 import com.uor.eng.model.Contact;
 import com.uor.eng.payload.other.ContactDTO;
 import com.uor.eng.repository.ContactRepository;
-import com.uor.eng.exceptions.ResourceNotFoundException;
-import com.uor.eng.exceptions.BadRequestException;
 import com.uor.eng.util.EmailService;
 import org.junit.jupiter.api.*;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -12,22 +12,18 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.modelmapper.ModelMapper;
-import org.springframework.test.context.ActiveProfiles;
 
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
-@ActiveProfiles("test")
 class ContactServiceImplTest {
-
-  @InjectMocks
-  private ContactServiceImpl contactService;
 
   @Mock
   private ContactRepository contactRepository;
@@ -38,144 +34,162 @@ class ContactServiceImplTest {
   @Mock
   private EmailService emailService;
 
+  @InjectMocks
+  private ContactServiceImpl contactService;
+
   private Contact contact;
   private ContactDTO contactDTO;
 
   @BeforeEach
   void setUp() {
-    contact = new Contact(1L, "John Doe", "john.doe@example.com", "1234567890", "Subject", "Message");
-    contactDTO = new ContactDTO(1L, "John Doe", "john.doe@example.com", "1234567890", "Subject", "Message");
-  }
-
-  @AfterEach
-  void tearDown() {
-    reset(contactRepository, modelMapper);
+    contact = new Contact(1L, "John Doe", "john@example.com", "1234567890", "Test Subject", "Test Message");
+    contactDTO = new ContactDTO(1L, "John Doe", "john@example.com", "1234567890", "Test Subject", "Test Message");
   }
 
   @Test
-  @DisplayName("Test save contact - Success")
+  @DisplayName("Save contact - Success")
   @Order(1)
-  void saveContact_shouldSaveAndReturnContactDTO() {
+  void saveContact_Success() {
+    // Arrange
     when(modelMapper.map(contactDTO, Contact.class)).thenReturn(contact);
     when(contactRepository.save(contact)).thenReturn(contact);
     when(modelMapper.map(contact, ContactDTO.class)).thenReturn(contactDTO);
 
-    ContactDTO savedContactDTO = contactService.saveContact(contactDTO);
+    // Act
+    ContactDTO result = contactService.saveContact(contactDTO);
 
-    assertNotNull(savedContactDTO);
-    assertEquals(contactDTO.getId(), savedContactDTO.getId());
-    verify(contactRepository, times(1)).save(contact);
+    // Assert
+    assertNotNull(result);
+    assertEquals(1L, result.getId());
+    assertEquals("John Doe", result.getName());
+    verify(contactRepository).save(contact);
   }
 
   @Test
-  @DisplayName("Test save contact - Null")
+  @DisplayName("Save contact - Null input")
   @Order(2)
-  void saveContact_shouldThrowBadRequestExceptionWhenNull() {
-    assertThrows(BadRequestException.class, () -> contactService.saveContact(null));
+  void saveContact_NullInput() {
+    // Act & Assert
+    BadRequestException exception = assertThrows(BadRequestException.class,
+            () -> contactService.saveContact(null));
+    assertEquals("Contact data cannot be null.", exception.getMessage());
     verify(contactRepository, never()).save(any());
   }
 
   @Test
-  @DisplayName("Test get all contacts - Success")
+  @DisplayName("Get all contacts - Success")
   @Order(3)
-  void getAllContacts_shouldReturnListOfContacts() {
-    List<Contact> contacts = List.of(contact);
+  void getAllContacts_Success() {
+    // Arrange
+    List<Contact> contacts = Collections.singletonList(contact);
     when(contactRepository.findAll()).thenReturn(contacts);
     when(modelMapper.map(contact, ContactDTO.class)).thenReturn(contactDTO);
 
-    List<ContactDTO> contactDTOList = contactService.getAllContacts();
+    // Act
+    List<ContactDTO> result = contactService.getAllContacts();
 
-    assertNotNull(contactDTOList);
-    assertEquals(1, contactDTOList.size());
-    assertEquals(contactDTO.getName(), contactDTOList.get(0).getName());
-    verify(contactRepository, times(1)).findAll();
+    // Assert
+    assertNotNull(result);
+    assertEquals(1, result.size());
+    assertEquals("John Doe", result.get(0).getName());
   }
 
   @Test
-  @DisplayName("Test get all contacts - Empty")
+  @DisplayName("Get all contacts - Empty")
   @Order(4)
-  void getAllContacts_shouldThrowResourceNotFoundExceptionWhenEmpty() {
-    when(contactRepository.findAll()).thenReturn(new ArrayList<>());
+  void getAllContacts_Empty() {
+    // Arrange
+    when(contactRepository.findAll()).thenReturn(Collections.emptyList());
 
-    assertThrows(ResourceNotFoundException.class, () -> contactService.getAllContacts());
-    verify(contactRepository, times(1)).findAll();
+    // Act & Assert
+    ResourceNotFoundException exception = assertThrows(ResourceNotFoundException.class,
+            () -> contactService.getAllContacts());
+    assertTrue(exception.getMessage().contains("No contacts found"));
   }
 
   @Test
-  @DisplayName("Test get contact by ID - Success")
+  @DisplayName("Get contact by ID - Success")
   @Order(5)
-  void getContactById_shouldReturnContactDTO() {
+  void getContactById_Success() {
+    // Arrange
     when(contactRepository.findById(1L)).thenReturn(Optional.of(contact));
     when(modelMapper.map(contact, ContactDTO.class)).thenReturn(contactDTO);
 
-    ContactDTO foundContact = contactService.getContactById(1L);
+    // Act
+    ContactDTO result = contactService.getContactById(1L);
 
-    assertNotNull(foundContact);
-    assertEquals(contactDTO.getId(), foundContact.getId());
-    verify(contactRepository, times(1)).findById(1L);
+    // Assert
+    assertNotNull(result);
+    assertEquals(1L, result.getId());
+    assertEquals("John Doe", result.getName());
   }
 
   @Test
-  @DisplayName("Test get contact by ID - Not Found")
+  @DisplayName("Get contact by ID - Not found")
   @Order(6)
-  void getContactById_shouldThrowResourceNotFoundExceptionWhenNotFound() {
+  void getContactById_NotFound() {
+    // Arrange
     when(contactRepository.findById(1L)).thenReturn(Optional.empty());
 
-    assertThrows(ResourceNotFoundException.class, () -> contactService.getContactById(1L));
-    verify(contactRepository, times(1)).findById(1L);
+    // Act & Assert
+    ResourceNotFoundException exception = assertThrows(ResourceNotFoundException.class,
+            () -> contactService.getContactById(1L));
+    assertTrue(exception.getMessage().contains("Contact with ID 1 not found"));
   }
 
   @Test
-  @DisplayName("Test delete contact - Success")
+  @DisplayName("Delete contact - Success")
   @Order(7)
-  void deleteContact_shouldDeleteContact() {
+  void deleteContact_Success() {
+    // Arrange
     when(contactRepository.existsById(1L)).thenReturn(true);
 
+    // Act
     contactService.deleteContact(1L);
 
-    verify(contactRepository, times(1)).deleteById(1L);
+    // Assert
+    verify(contactRepository).deleteById(1L);
   }
 
   @Test
-  @DisplayName("Test delete contact - Not Found")
+  @DisplayName("Delete contact - Not found")
   @Order(8)
-  void deleteContact_shouldThrowResourceNotFoundExceptionWhenNotFound() {
+  void deleteContact_NotFound() {
+    // Arrange
     when(contactRepository.existsById(1L)).thenReturn(false);
 
-    assertThrows(ResourceNotFoundException.class, () -> contactService.deleteContact(1L));
-    verify(contactRepository, times(1)).existsById(1L);
+    // Act & Assert
+    ResourceNotFoundException exception = assertThrows(ResourceNotFoundException.class,
+            () -> contactService.deleteContact(1L));
+    assertTrue(exception.getMessage().contains("does not exist"));
   }
 
   @Test
-  @DisplayName("Test send reply - Success")
+  @DisplayName("Send reply - Success")
   @Order(9)
-  void sendReply_shouldSendEmailSuccessfully() {
-    Long contactId = 1L;
-    String replyMessage = "Thank you for reaching out!";
-    when(contactRepository.findById(contactId)).thenReturn(Optional.of(contact));
+  void sendReply_Success() {
+    // Arrange
+    when(contactRepository.findById(1L)).thenReturn(Optional.of(contact));
     when(modelMapper.map(contact, ContactDTO.class)).thenReturn(contactDTO);
 
-    contactService.sendReply(contactId, replyMessage);
+    // Act
+    contactService.sendReply(1L, "Thank you for your message.");
 
-    verify(contactRepository, times(1)).findById(contactId);
-    verify(modelMapper, times(1)).map(contact, ContactDTO.class);
-    verify(emailService, times(1)).sendResponseForContactUs(contactDTO, replyMessage);
+    // Assert
+    verify(emailService).sendResponseForContactUs(contactDTO, "Thank you for your message.");
   }
 
   @Test
-  @DisplayName("Test send reply - Contact Not Found")
+  @DisplayName("Send reply - Contact not found")
   @Order(10)
-  void sendReply_shouldThrowResourceNotFoundExceptionWhenContactNotFound() {
-    Long contactId = 1L;
-    String replyMessage = "Thank you for reaching out!";
-    when(contactRepository.findById(contactId)).thenReturn(Optional.empty());
+  void sendReply_ContactNotFound() {
+    // Arrange
+    when(contactRepository.findById(1L)).thenReturn(Optional.empty());
 
+    // Act & Assert
     ResourceNotFoundException exception = assertThrows(ResourceNotFoundException.class,
-        () -> contactService.sendReply(contactId, replyMessage));
-
-    assertEquals("Contact with ID 1 not found. Please check the ID and try again.", exception.getMessage());
-    verify(contactRepository, times(1)).findById(contactId);
+            () -> contactService.sendReply(1L, "Thank you"));
+    assertTrue(exception.getMessage().contains("Contact with ID 1 not found"));
     verify(emailService, never()).sendResponseForContactUs(any(), any());
   }
-
 }
